--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.0.9",
+    "@material-ui/core": "^3.3.1",
     "@trendmicro/react-modal": "^2.2.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
