--- a/react/package.json
+++ b/react/package.json
@@ -28,6 +28,7 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "flag-icon-css": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "html-tag": "^2.0.0",
     "material-ui": "^1.0.0-beta.47",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
@@ -35,14 +36,17 @@
     "react-app-polyfill": "^0.1.3",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.5.2",
+    "react-iframe": "^1.3.3",
     "react-loadable": "^5.5.0",
+    "react-log-stream": "^0.1.5",
     "react-modal": "^3.6.1",
     "react-router-config": "^4.4.0-beta.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.5.2",
     "reactjs-popup": "^1.3.0",
     "reactstrap": "^6.5.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "tail": "^2.0.1"
   },
   "devDependencies": {
     "react-scripts": "^2.0.4"
