--- a/laravel.local/composer.json
+++ b/laravel.local/composer.json
@@ -10,6 +10,7 @@
         "karlmonson/laravel-ping": "^1.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/remote": "^5.7",
         "symfony/process": "^4.1"
     },
     "require-dev": {
